# iai_common_msgs

iai_urdf_msgs/: CMakeLists.txt  package.xml
iai_urdf_msgs/srv/: SimpleAlterUrdf.srv  UrdfAlterUrdf.srv
