<?xml version="1.0"?>
<package>
  <name>iai_urdf_msgs</name>
  <version>0.0.4</version>
  <description>Service definitions for manipulating the robot description.</description>

  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>

</package>
